Fixed color contrast

--- a/blog/styles.css
+++ b/blog/styles.css
@@ -65,7 +65,7 @@ main {
 }
 
 .rating {
-    color: #d6a500;
+    color: #8a6500;
     letter-spacing: 1px;
 }
 
